# prefect-vault-secrets

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements-prd.txt  requirements.txt  setup.cfg  setup.py
src/prefect_vault_secrets/: vault_secrets.py
tests/prefect_vault_secrets/: conftest.py  test_vault_secrets.py
