[semantic_release]
version_source = tag
version_variable = "src/__init__.py:__version__"
patch_without_tag = True

[bdist_wheel]
universal = 1

[options]
setup_requires =
  python-semantic-release
  setuptools
  setuptools_scm
  wheel

[flake8]
max-line-length = 90
exclude = .venv,__pycache__,build,dist,.eggs

[tool:pytest]